force-app/main/default/objects/SOW__c/SOW__c.object-meta.xml
<CustomObject>
    <label>SOW</label>
    <nameField>
        <displayFormat>SOW-{0000}</displayFormat>
        <label>SOW Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOWs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>