force-app/main/default/objects/SOW__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SOWs</relationshipLabel>
    <relationshipName>SOWs</relationshipName>
</CustomField>