force-app/main/default/objects/SOW__c/fields/Client_Goals__c.field-meta.xml
<CustomField>
    <fullName>Client_Goals__c</fullName>
    <label>Client Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>