force-app/main/default/objects/SOW__c/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <label>Dependencies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>