force-app/main/default/objects/SOW__c/fields/Document_File__c.field-meta.xml
<CustomField>
    <fullName>Document_File__c</fullName>
    <label>Document File</label>
    <type>Url</type>
</CustomField>