force-app/main/default/objects/SOW__c/fields/MSA__c.field-meta.xml
<CustomField>
    <fullName>MSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSA</label>
    <referenceTo>MSA__c</referenceTo>
    <relationshipLabel>SOWs</relationshipLabel>
    <relationshipName>SOWs</relationshipName>
    <type>Lookup</type>
</CustomField>