force-app/main/default/objects/SOW__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>