force-app/main/default/objects/SOW__c/fields/Scope_Summary__c.field-meta.xml
<CustomField>
    <fullName>Scope_Summary__c</fullName>
    <label>Scope Summary</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>